Co-authored-by: aleadventurs <aleadventurs@users.noreply.github.com>

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,9 +12,9 @@
 
 
     <!-- se cargan primero las escenas y despues el juego para que phaser sepa donde estan, game siempre al final-->
-    <script type="text/javascript" src="./js/scenes/scene1.js"></script>
-    <script type="text/javascript" src="./js/scenes/scene2.js"></script>
-    <script type="text/javascript" src="./js/scenes/scene3.js"></script>
+    <script type="text/javascript" src="./js/escenas/escena1.js"></script>
+    <script type="text/javascript" src="./js/escenas/escena2.js"></script>
+    <script type="text/javascript" src="./js/escenas/escena3.js"></script>
     <script type="text/javascript" src="./js/game.js"></script> <!-- ruta escena/archivo game/main -->
 </body>
 </html>
