--- a/src/main/resources/static/pagina.html
+++ b/src/main/resources/static/pagina.html
@@ -8,7 +8,7 @@
 <body>
     <h1>hola</h1>
     <p>ayuda</p>
-    <img src="assets/eldenmiedo.jpg"/>
+    <!-- <img src="assets/eldenmiedo.jpg"/> -->
     <table>
         <tr>
             <th>col 1</th>
@@ -33,7 +33,7 @@
     </table>
     <a href="http://26.169.248.78:8080/test-game">Link</a>
     <p>ayuda?</p>
-    <img src="assets/eldenmiedo.jpg" alt="alterantivo" width="500" height="100">    
+    <!--<img src="assets/eldenmiedo.jpg" alt="alterantivo" width="500" height="100">    -->
     <script>
 	    let socket = new WebSocket("ws://localhost:8080/game");
     </script>
