Prueba de migración a websocket message broker

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
+    <!-- Phaser framework -->
     <script src="//cdn.jsdelivr.net/npm/phaser@v3.90.0/dist/phaser.js"></script>
-
+    
+    <!-- Bibliotecas para WebSocket STOMP -->
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
     <!-- se cargan primero las escenas y despues el juego para que phaser sepa donde estan, game siempre al final-->
     <script type="text/javascript" src="./js/escenas/escena1.js"></script>
