--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,6 +14,7 @@
     <!-- Bibliotecas para WebSocket STOMP -->
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+    <script type="text/javascript" src="./js/websocket-client.js"></script>
 
     <!-- se cargan primero las escenas y despues el juego para que phaser sepa donde estan, game siempre al final-->
     <script type="text/javascript" src="./js/escenas/escena1.js"></script>
