Co-authored-by: LucasBichi <LucasBichi@users.noreply.github.com>

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
     <!-- se cargan primero las escenas y despues el juego para que phaser sepa donde estan, game siempre al final-->
+    <script type="text/javascript" src="./js/conexionWS.js"></script>
     <script type="text/javascript" src="./js/escenas/escena1.js"></script>
     <script type="text/javascript" src="./js/escenas/escena2.js"></script>
     <script type="text/javascript" src="./js/escenas/escena3.js"></script>
